[gd_scene load_steps=2 format=3 uid="uid://bo1b0w4uap04p"]

[ext_resource type="Script" uid="uid://blpktxceep1ix" path="res://UI/todo_list.gd" id="1_1brrm"]

[node name="TodoList" type="Node2D"]
script = ExtResource("1_1brrm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TodoContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 70.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/TodoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Tasks"
horizontal_alignment = 1

[node name="AddTodoButton" type="Button" parent="CanvasLayer/TodoContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Task"

[connection signal="pressed" from="CanvasLayer/TodoContainer/AddTodoButton" to="." method="_on_add_todo_pressed"]
